--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,20 @@
+bencodepy==0.9.5
+blinker==1.9.0
+cffi==2.0.0
+click==8.3.1
+cryptography==41.0.7
 Flask==3.0.0
 Flask-SQLAlchemy==3.1.1
-bencodepy==0.9.5
+greenlet==3.3.2
+itsdangerous==2.2.0
+Jinja2==3.1.6
+libtorrent==2.0.11
+MarkupSafe==3.0.3
+pycparser==3.0
+PyMySQL==1.1.0
+SQLAlchemy==2.0.47
+typing_extensions==4.15.0
+Werkzeug==3.1.6
+requests==2.31.0
+beautifulsoup4==4.12.3
+lxml==5.1.0
